<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="140dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/white_cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/merriweathersans_medium"
        android:text="@string/application_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/localizationList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/fav_list"
        app:layout_constraintEnd_toEndOf="@+id/appTitle"
        app:layout_constraintStart_toStartOf="@+id/appTitle"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/reloadData"
        app:layout_constraintEnd_toEndOf="@+id/localizationList"
        app:layout_constraintStart_toStartOf="@+id/localizationList"
        app:layout_constraintTop_toBottomOf="@+id/localizationList" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchCentigrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumb="@drawable/thumb"
        app:track="@drawable/track"
        app:showText="true"
        android:textOn="@string/fahrenheitDegree"
        android:textOff="@string/celsjuszDegree"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/unitOfMeasure"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


</androidx.constraintlayout.widget.ConstraintLayout>